Refactor Post and PostComment services to use postRefId for identification (#2344)
* Refactor Post and PostComment services to use postRefId for identification

- Updated PostCommentController to use new command and query services.
- Modified PostRepository to check existence and find posts by postRefId.
- Introduced PostCommentRedisRepository for Redis operations.
- Adjusted PostRedisRepository to use Long as ID type.
- Enhanced KafkaProducerService to handle post-comment events.
- Refactored PostService to utilize postId instead of title/email for operations.
- Created CacheKeyGenerator for consistent cache key generation.
- Added KafkaPublishHelper for streamlined Kafka publish error handling.
- Updated PostController to manage posts by postId.
- Modified database migration scripts to include unique constraints and new columns.
- Updated integration tests to reflect changes in post handling and cache validation.

* minor polish